Jenkins-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkinsci/blueocean
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-docker-certs
              mountPath: /certs/client:ro
            - name: jenkins-home
              mountPath: /var/jenkins_home
        
        - name: docker
          image: docker:dind
          securityContext:
            privileged: true
          ports:
            - name: docker-port
              containerPort: 2376
          volumeMounts:
            - name: jenkins-docker-certs
              mountPath: /certs/client
            - name: jenkins-home
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-home
          emptyDir: {}
        - name: jenkins-docker-certs
          emptyDir: {}
