jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: jenkins-service
          servicePort: 80
